chaged the html and css

--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ body {
     justify-content: center;
     height: 100vh;
     margin: 0;
-    background-color: #e0f7fa;
+    background-color: #0ecbe3;
 }
 
 h1 {
